--- a/views/default/assets/default.css
+++ b/views/default/assets/default.css
@@ -44,11 +44,11 @@ div.container div.block h3 a {
     display: block;
     float: left;
     height: 20px;
+    margin: 0 0 0 8px;
     line-height: 20px;
 }
 div.container div.block h3 a img {
     display: block;
-    margin: 0 0 0 8px;
     height: 100%;
     transition: transform 100ms linear;
 }
@@ -117,6 +117,7 @@ div.container div.block[data-highlight-index="12"] div.content pre ol li:nth-chi
 div.container div.block[data-highlight-index="13"] div.content pre ol li:nth-child(14),
 div.container div.block[data-highlight-index="14"] div.content pre ol li:nth-child(15) {
     outline: 1px dashed #cccccc;
+    outline-offset: -1px;
 }
 div.container footer {
     text-align: right;
@@ -147,8 +148,4 @@ body.skin-desert div.container div.block div.content pre ol li {
     list-style-type: decimal;
     line-height: 20px;
     border-left: 1px solid #222222;
-}
-body.skin-desert div.container div.block div.content pre ol li:before {
-}
-body.skin-desert div.container div.block div.content pre ol:first-child {
 }
